<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <!-- 程式標題 -->
    <string name="app_name">行動智慧健康照護系統</string>
    
    <!-- 程式訊息 -->
    <string name="bth_unavailable">藍芽裝置無法使用</string>
    
    <!-- Main的選項列 -->
    <string name="add">新增病患</string>
    <string name="hospital">附近醫院</string>
    <string name="discoverable">關於</string>
    
    <!-- 本程式的說明 -->
    <string name="about_title">HeartBeat Monitor Tablet v2.4 final 2013/11/28</string>
    <string name="about_msg">本程式由Weiting Lin 撰寫於KY_Lab,  由 Shih-Hao Liu 修改於 NUK_CSIE ISP_Lab (v1.5 final),  由 Yan-Jia Chiou 修改於 NUK_CSIE ISP_Lab (v2.4 final)</string>
    <string name="ok_label">確認</string>
    
    <!-- 藍芽連線裝置 -->
    <string name="scanning">搜尋可用藍牙裝置中...</string>
    <string name="select_device">選擇裝置並連線</string>
    <string name="none_paired">尚無已配對裝置</string>
    <string name="none_found">未發現可用之藍牙裝置</string>
    <string name="title_paired_devices">已配對藍牙裝置</string>
    <string name="title_other_devices">其他可用裝置</string>
    <string name="button_scan">搜尋可用藍牙裝置</string>
	
    <!-- 新增病患資料 -->
    <string name="enter">請輸入資料</string>
   	<string name="hint_name">姓名</string>
	<string name="hint_email">E-Mail</string>
	<string name="hint_phone">電話</string>
	<string name="hint_sms_phone_1">緊急聯絡人1電話</string>
	<string name="hint_sms_phone_2">緊急聯絡人2電話</string>
	<string name="hint_sms_phone_3">緊急聯絡人3電話</string>
	<string name="hint_address">地址</string>
	<string name="hint_note">備註</string>
	<string name="label_name">姓名:</string>
	<string name="label_email">E-Mail:</string>
	<string name="label_phone">電話:</string>
	<string name="label_sms_phone_1">緊急聯絡人1電話:</string>
	<string name="label_sms_phone_2">緊急聯絡人2電話:</string>
	<string name="label_sms_phone_3">緊急聯絡人3電話:</string>
	<string name="label_address">地址:</string>
	<string name="label_note">備註:</string>
	<string name="button_save_contact">儲存</string>
	<string name="error_Button">確定</string>
	<string name="error_Title">姓名欄位為空</string>
	<string name="error_Message">你至少必須輸入姓名</string>
	
	<!-- 新增病患資料 -->
	<string name="option_title">請選擇功能</string>
	
	<!-- 介面-->
	<string name="no_patient">  空  </string>
	<string name="no_connect">  尚未連結  </string>
	<string name="no_synch">  尚未同步  </string>
	<string name="back">  上一頁  </string>
	<string name="next">  下一頁  </string>
	
	<!-- 警告視窗 -->
	<string name="altdia_title">異常警告</string>
    <string name="altdia_ihr_high">的心跳過快!!</string>
    <string name="altdia_ihr_low">的心跳過慢!!</string>
    <string name="altdia_bt_high">的體溫過高!!</string>
    <string name="altdia_LBBB">的左束分支阻斷(LBBB)!!</string>
    <string name="altdia_RBBB">的右束分支阻斷(RBBB)!!</string>
    <string name="altdia_VPC">的心室過早收縮(VPC)!!</string>
    <string name="altdia_APC">的心房過早收縮(APC)!!</string>
    <string name="altdia_sendsms1">請按下確定鍵解除警報</string>
    <string name="altdia_sms_message1">HeartBeatHMM 測試警告簡訊 - 心跳異常</string>
    <string name="altdia_sms_message2">HeartBeatHMM 測試警告簡訊 - 體溫異常</string>

	<!-- 確認選項 -->
	<string name="quit_yes">確定</string>
	
	<!-- 線上存取 -->
	<string name="title_create_account">新增帳號</string>
	<string name="title_synch_login">登入</string>
	<string name="title_connect_internet">連結網路</string>
	<string name="hint_username">帳號</string>
	<string name="hint_password">密碼</string>
	<string name="hint_pin">存取PIN碼</string>
	<string name="button_create">新增帳號</string> 
	<string name="button_login">登入</string>
    <string name="button_new">新增帳號</string>
    <string name="button_send">送出</string>
	<string name="error_Title2">欄位為空</string>
	<string name="error_Message2">你必須輸入每個欄位以登入到Server</string>
	<string name="error_Message3">你必須輸入每個欄位以連結病患</string>
	<string name="error_Message4">你必須輸入每個欄位以新增一個帳號</string>
				 
	<!-- 模擬選項 --> 
	<string name="title_simulate">模擬訊號選項</string>
	
	<!-- 最近醫院 -->
	<string name="title_hospital">附近醫院</string>
	<string name="my_location">目前位置</string>
</resources>
