<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#F3EFEA"
	android:textColor="#4A7D6B"
    >
    <TextView
	    android:id="@+id/textView1"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:text="  行動式多個心電圖即時辨識、監控及照護系統"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="20sp"
	    android:gravity="center_vertical|left"
		android:background="#F3EFEA"
		android:textColor="#4A7D6B"/>

	<ScrollView
	   android:layout_width="match_parent" 
	   android:layout_height="wrap_content" android:layout_weight="1">
	   <LinearLayout android:id="@+id/linearLayout"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:orientation="vertical" android:padding="5dp"
		  android:background="#F3EFEA"
		  android:textColor="#4A7D6B">
	
	       <TextView
	           android:id="@+id/nameText"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/enter"
	           android:textAppearance="?android:attr/textAppearanceLarge"
			   android:background="#F3EFEA"
			   android:textColor="#4A7D6B"/>
	
	       <TextView
	           android:id="@+id/textView3"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/label_name"
			   android:background="#F3EFEA"
			   android:textColor="#4A7D6B"/>
	
	      <EditText
			 android:id="@+id/nameEditText"
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_name"
	         android:inputType="textPersonName|textCapWords"></EditText>
	
	      <TextView
	          android:id="@+id/textView2"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_phone"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/phoneEditText" 
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_phone" 
	         android:inputType="phone"></EditText>
	
	      <TextView
	          android:id="@+id/textView7"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_sms_phone_1"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/smsphoneEditText1" 
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_sms_phone_1" 
	         android:inputType="phone"></EditText>
	      
	      <TextView
	          android:id="@+id/textView7"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_sms_phone_2"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/smsphoneEditText2" 
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_sms_phone_2" 
	         android:inputType="phone"></EditText>
	      
	      <TextView
	          android:id="@+id/textView7"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_sms_phone_3"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/smsphoneEditText3" 
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_sms_phone_3" 
	         android:inputType="phone"></EditText>
	      
	      <TextView
	          android:id="@+id/textView4"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_email"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/emailEditText"
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_email"
	         android:inputType="textEmailAddress"></EditText>
	
	      <TextView
	          android:id="@+id/textView5"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_address"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/addressEditText" 
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionNext" android:hint="@string/hint_address"
	         android:inputType="textPostalAddress|textCapWords"></EditText>
	
	      <TextView
	          android:id="@+id/textView6"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/label_note"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B"/>
	
	      <EditText android:id="@+id/noteEditText" 
	         android:layout_width="match_parent" 
	         android:layout_height="wrap_content" 
	         android:imeOptions="actionDone" android:hint="@string/hint_note"
	         android:inputType="textPostalAddress|textCapWords"></EditText>
	      
	      <Button android:id="@+id/saveContactButton" 
	         android:layout_width="wrap_content"
	         android:layout_height="40dp"
	         android:layout_marginTop="15dp"
	         android:layout_gravity="center_horizontal"
	         android:text="@string/button_save_contact"
			 android:background="@drawable/button_style"
			 android:textColor="#4A7D6B"></Button>
	   </LinearLayout>
	</ScrollView>
</LinearLayout>