<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:background="#F3EFEA"
	android:textColor="#4A7D6B"
    >
    <TextView
	    android:id="@+id/textView1"
	    android:layout_width="fill_parent"
	    android:layout_height="40dp"
	    android:text="  行動式多個心電圖即時辨識、監控及照護系統"
	    android:textAppearance="?android:attr/textAppearanceLarge"
	    android:textSize="20sp"
	    android:gravity="center_vertical|left"
		android:background="#F3EFEA"
		android:textColor="#4A7D6B"/>

	<ScrollView
	   android:layout_width="match_parent" 
	   android:layout_height="wrap_content" android:layout_weight="1">
	
	   <TableLayout
		   android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:stretchColumns="1"
		   android:layout_margin="5dp"
		   android:background="#F3EFEA"
		   android:textColor="#4A7D6B">
	       
	      <TableRow
			  android:id="@+id/nameTableRow"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	         <TextView
				 android:id="@+id/nameLabelTextView"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_name"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/nameTextView"
				 style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>
	
	      <TableRow
			  android:id="@+id/phoneTableRow"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content">
	         <TextView
				 android:id="@+id/phoneLabelTextView"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_phone"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/phoneTextView"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>
	      
	      <TableRow
			  android:id="@+id/smsphoneTableRow1"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	         <TextView
				 android:id="@+id/smsphoneLabelTextView1"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_sms_phone_1"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/smsphoneTextView1"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>

	      <TableRow
			  android:id="@+id/smsphoneTableRow2"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	         <TextView
				 android:id="@+id/smsphoneLabelTextView2"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_sms_phone_2"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/smsphoneTextView2"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>

	      <TableRow
			  android:id="@+id/smsphoneTableRow3"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	         <TextView
				 android:id="@+id/smsphoneLabelTextView3"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_sms_phone_3"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/smsphoneTextView3"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>	 
	      	 
	      <TableRow
			  android:id="@+id/emailTableRow"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	         <TextView
				 android:id="@+id/emailLabelTextView"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_email"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/emailTextView"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>
	
	      <TableRow
			  android:id="@+id/addressTableRow"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	
	         <TextView
	             android:id="@+id/streetLabelTextView"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_address" 
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/addressTextView"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>
	
	      <TableRow
			  android:id="@+id/noteTableRow"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
			  android:background="#F3EFEA"
			  android:textColor="#4A7D6B">
	
	         <TextView
	             android:id="@+id/cityLabelTextView"
	             style="@style/ContactLabelTextView"
	             android:text="@string/label_note" 
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	         <TextView
				 android:id="@+id/noteTextView"
	             style="@style/ContactTextView"
	             android:textSize="26sp"
				 android:background="#F3EFEA"
				 android:textColor="#4A7D6B"></TextView>
	      </TableRow>
	   </TableLayout>
	</ScrollView>
</LinearLayout>